# dist-git-to-source-git

./: .gitignore  .pre-commit-config.yaml  .zuul.yaml  CONTRIBUTING.md  Containerfile  Containerfile.tests  Makefile  Pipfile  README.md  dist2src.py  macros.packit  packitpatch  question.md  setup.cfg  zuul-tests.yaml
.github/workflows/: build-and-push.yml
deployment/: Makefile  README.md  check.yml  deploy.yml  docker-compose.yml
deployment/roles/deploy/: README.md
deployment/roles/deploy/defaults/: main.yml
deployment/roles/deploy/files/: nginx-dc.yml  nginx-route.yml  nginx-service.yml  pushgateway-dc.yml  pushgateway-service.yml  redis-dc.yml  redis-pvc.yml  redis-service.yml
deployment/roles/deploy/tasks/: check-api-token.yml  deploy-centosmsg.yml  deploy-configmap.yml  main.yml  (+9 more)
dist2src/: cli.py  constants.py  core.py  not_utils.py
dist2src/worker/: __init__.py  celerizer.py  config.py  decorators.py  logging.py  monitoring.py  processor.py  sentry.py  tasks.py  updater.py
files/: Containerfile.worker  gitconfig  install-deps-worker.yml  install-deps.yml  recipe-worker.yml  run_worker.sh  setup_env_in_openshift.sh  zuul-build-image.yml  zuul-check.yml  zuul-deploy.yml  zuul-generate-secrets.yml  zuul-tests.yaml
tests/: __init__.py  conftest.py  test_convert.py  test_dist2src.py  test_git.py  test_logging.py  test_processor.py  test_update.py  test_worker.py  test_worker_updater.py
tests/test_data/test_update/: tests.test_update.Update.test_update.yaml  tests.test_update.Update.test_update.yaml.haproxy_1.tar.xz
tests_localhost/: test_convert.py
(+23 files in other folders)
