[metadata]
name = dist-git-to-source-git
description = Utility script to convert a dist-git repository to a source-git repository
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/packit/dist-git-to-source-git
author = Red Hat
author_email = user-cont-team@redhat.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development
    Topic :: Utilities
keywords =
    git
    packaging
    fedora
    rpm
    dist-git
    source-git

[options]
packages = find:
install_requires =
    click
    GitPython
    rebasehelper
    sh
    timeout-decorator
    # worker
    celery[redis]
python_requires = >=3.6
include_package_data = True
setup_requires =
    setuptools_scm
    setuptools_scm_git_archive

[options.entry_points]
console_scripts =
    dist2src=dist2src.cli:cli
